--- a/MDN-WebDev/test-site/index.html
+++ b/MDN-WebDev/test-site/index.html
@@ -13,7 +13,7 @@
 	Logo : Animated version of a red tyrannosaurus with pointy teeth and spiked	 up hair.">
 	<p>This is Qamar. My background is this : I graduated from IIIT-H in Computer Science, was a
 	research fellow at Institute of Mathematical Sciences, worked at Housing.com and Software
-	AG.</p>
+	AG and Microsoft.</p>
 
         <p>While I was working at Software AG in Hyderabad I had a skull fracture, frontal temporal
 	bone got fractured. I had to leave everything, went to the Himalayas(taught monks English
